ManagerController for user story.